Article Paste url working, and profile route on server defined

--- a/client/src/app/category/category.component.html
+++ b/client/src/app/category/category.component.html
@@ -3,6 +3,6 @@
 <br>
 <a [routerLink]="['/videos-search']">Videos</a>
 <br>
-<a [routerLink]="['/articles-search']">articles</a>
+<a [routerLink]="['/url-search']">articles</a>
 
 <router-outlet></router-outlet>
