--- a/client/src/app/search-url/search-url.component.html
+++ b/client/src/app/search-url/search-url.component.html
@@ -7,5 +7,5 @@
   <h1>{{ myPubli.title }}</h1>
   <img src="{{ myPubli.image }}" alt="">  <br>
   <a href="{{myPubli.link}}" target="_blank">See on {{ myPubli.author }}</a>
-  <button type="button" (click)='savePubli()'> <a [routerLink]='["/profile"]'>Add to my profile</a></button>
+  <button type="button" (click)='savePubli()'>Add to my profile</button>
 </div>
