--- a/client/src/app/profile/profile.component.html
+++ b/client/src/app/profile/profile.component.html
@@ -1,3 +1,22 @@
-<p>
-  profile works!
-</p>
+
+<h1>Welcome to your profile</h1>
+
+<li class = "public" *ngFor="let publi of publicationList">
+  {{publi.title}}
+  <!-- <img [src]="publi.image"/> -->
+</li>
+
+<div class="displayList">
+<h3>Articles</h3>
+
+</div>
+
+<div class="displayList">
+<h3>Video</h3>
+
+</div>
+
+<div class="displayList">
+  <h3>Books</h3>
+
+</div>
